# mindmap

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml.example  buildspec.yml
.github/workflows/: rust.yml
migrations/2018-12-12-112659_initial/: down.sql  up.sql
src/: main.rs  note.rs  schema.rs  user.rs
src/models/: mod.rs  note.rs  note_link.rs  user.rs  user_token.rs
src/routes/: auth.rs  link.rs  mod.rs  note.rs  note_history.rs  search.rs
static/: style.css
templates/: _layout.tera  _login_layout.tera  _note_layout.tera  delete_preview.tera  edit_note.tera  index.tera  index_not_logged_in.tera  login.tera  node.html  note.tera  note_history.tera  register.tera  search.tera  search_link.tera
