[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "mindmap_server"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
dotenv = "0.13.0"
failure = "0.1.3"
failure_derive = "0.1.3"
rocket = "0.4.0"
serde_derive = "1.0.82"
serde = "1.0.82"
rust-crypto = "0.2.36"
slug = "0.1.4"

[dependencies.diesel]
features = ["postgres", "uuid", "chrono"]
version = "1.3.3"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "tera_templates"]
version = "0.4.0"

[dependencies.uuid]
version = "0.6.5" # dependent of diesel
features = ["serde"]

